--- a/package.json
+++ b/package.json
@@ -2,21 +2,32 @@
   "name": "lit-custom-element",
   "version": "0.0.1",
   "description": "Lightweight library for building native web components",
-  "main": "index.js",
+  "main": "lit-custom-element.js",
+  "module": "lit-custom-element.es.js",
   "scripts": {
-    "test": "ts-node node_modules/.bin/karma start karma.config.ts --single-run"
+    "build.demo": "ts-node --project tools/tsconfig.json tools/build-demo.ts",
+    "bundle": "ts-node --project tools/tsconfig.json tools/bundle.ts",
+    "test": "ts-node tools/test.ts",
+    "serve": "ts-node tools/server.ts",
+    "coveralls": "cat ./coverage/lcovonly | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aelbore/lit-custom-element.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "lit-html",
+    "custom-elements",
+    "web-components",
+    "lightweight"
+  ],
+  "author": "Arjay Elbore",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/aelbore/lit-custom-element/issues"
   },
   "homepage": "https://github.com/aelbore/lit-custom-element#readme",
+  "typings": "lit-custom-element.d.ts",
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/jasmine": "^3.3.8",
@@ -25,6 +36,7 @@
     "aria-fs": "0.0.2",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "coveralls": "^3.0.2",
     "express": "^4.16.4",
     "jasmine-core": "^3.3.0",
     "karma": "^4.0.0",
@@ -32,14 +44,14 @@
     "karma-jasmine": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-typescript": "^4.0.0",
+    "magic-string": "^0.25.2",
     "rollup": "^1.1.2",
-    "rollup-plugin-filesize": "^6.0.1",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.19.2",
     "ts-node": "^8.0.2",
     "tslib": "^1.9.3",
-    "typescript": "^3.3.1"
+    "typescript": "^3.3.3"
   },
   "dependencies": {
     "lit-html": "^1.0.0"
