--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,26 +3,15 @@
     "baseUrl": ".",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "importHelpers": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "outDir": "dist",
-    "removeComments": true,
-    "sourceMap": true,
-    "target": "es6",
+    "target": "es2015",
     "paths": {
-      "lit-custom-element": [ "src/index" ]
-    },
-    "lib" :[
-      "dom",
-      "es2015",
-      "es2017"
-    ]
+      "lit-custom-element": [ "src/index" ],
+      "lit-html": [ "node_modules/lit-html/lit-html" ]
+    }
   },
   "include": [
     "src/**/*.ts",
-    "tests/**/*.spec.ts",
-    "base.spec.ts",
-    "examples/**/*.ts"
+    "examples/**/*.ts",
+    "tests/**/*.ts"
   ]
 }
