--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es2015",
     "paths": {
-      "lit-custom-element": [ "src/index" ],
-      "lit-html": [ "node_modules/lit-html/lit-html" ]
+      "lit-custom-element": [ "src/index" ]
     }
-  },
-  "include": [
-    "src/**/*.ts",
-    "examples/**/*.ts",
-    "tests/**/*.ts"
-  ]
+  }
 }
