--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/aelbore/lit-custom-element#readme",
   "typings": "lit-custom-element.d.ts",
   "devDependencies": {
-    "aria-tools": "https://github.com/aelbore/aria-tools.git#master",
+    "aria-tools": "https://github.com/aelbore/aria-tools.git",
     "coveralls": "^3.0.2",
     "magic-string": "^0.25.2",
     "typescript": "^3.3.3"
