--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "lit-custom-element.js",
   "module": "lit-custom-element.es.js",
   "scripts": {
+    "build.tools": "ts-node --project tools/tsconfig.json ./node_modules/aria-tools/build.ts",
     "build.demo": "ts-node --project tools/tsconfig.json tools/build-demo.ts",
     "bundle": "ts-node --project tools/tsconfig.json tools/bundle.ts",
-    "test": "ts-node tools/test.ts",
+    "test": "aria test tests",
+    "serve.coverage": "aria serve --test-coverage",
     "serve": "ts-node tools/server.ts",
     "coveralls": "cat ./coverage/lcovonly | ./node_modules/coveralls/bin/coveralls.js"
   },
@@ -29,28 +31,13 @@
   "homepage": "https://github.com/aelbore/lit-custom-element#readme",
   "typings": "lit-custom-element.d.ts",
   "devDependencies": {
+    "aria-tools": "https://github.com/aelbore/aria-tools.git",
     "@types/express": "^4.16.1",
-    "@types/jasmine": "^3.3.8",
-    "@types/karma": "^3.0.1",
-    "@webcomponents/custom-elements": "^1.2.1",
-    "aria-fs": "0.0.2",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
+    "@types/jasmine": "^3.3.9",
+    "@types/karma": "^3.0.2",
+    "@types/node": "^11.9.4",
     "coveralls": "^3.0.2",
-    "express": "^4.16.4",
-    "jasmine-core": "^3.3.0",
-    "karma": "^4.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-typescript": "^4.0.0",
     "magic-string": "^0.25.2",
-    "rollup": "^1.1.2",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-typescript2": "^0.19.2",
-    "ts-node": "^8.0.2",
-    "tslib": "^1.9.3",
     "typescript": "^3.3.3"
   },
   "dependencies": {
