--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
   "homepage": "https://github.com/aelbore/lit-custom-element#readme",
   "typings": "lit-custom-element.d.ts",
   "devDependencies": {
-    "aria-tools": "0.0.3",
     "@types/express": "^4.16.1",
     "@types/jasmine": "^3.3.9",
     "@types/karma": "^3.0.2",
     "@types/node": "^11.10.4",
+    "aria-tools": "0.0.3",
     "coveralls": "^3.0.3",
+    "lit-element": "^2.0.1",
     "magic-string": "^0.25.2",
     "typescript": "^3.3.3333"
   },
