--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "target": "es2015",
     "paths": {
       "lit-custom-element": [ "src/index" ],
-      "lit-html": [ "node_modules/lit-html/lit-html" ]
+      "lit-html": [ "node_modules/lit-html/lit-html" ],
+      "lit-element": [ "node_modules/lit-element/lit-element" ]
     }
   }
 }
