--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lit-custom-element",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Lightweight library for building native web components",
   "main": "lit-custom-element.js",
   "module": "lit-custom-element.es.js",
@@ -36,11 +36,13 @@
     "@types/express": "^4.16.1",
     "@types/jasmine": "^3.3.12",
     "@types/karma": "^3.0.2",
-    "@types/node": "^11.12.2",
+    "@types/node": "^11.13.2",
     "aria-tools": "0.0.4",
     "coveralls": "^3.0.3",
     "lit-element": "^2.1.0",
-    "typescript": "^3.4.1"
+    "node-sass": "^4.11.0",
+    "rollup-plugin-minify-html-literals": "^1.2.2",
+    "typescript": "^3.4.2"
   },
   "dependencies": {
     "lit-html": "^1.0.0"
