--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "aria-build -d --external magic-string,typescript",
     "build.demo": "ts-node tools/build.demo",
     "build.tools": "ts-node --project tools/tsconfig.json ./node_modules/aria-tools/build.ts",
-    "test": "aria test --browser -d specs --check-coverage -c aria.config.ts",
+    "test": "aria test --browser -d specs --check-coverage",
     "serve.coverage": "aria serve --test-coverage",
     "serve": "ts-node tools/server.ts",
     "coveralls": "cat ./coverage/lcovonly | ./node_modules/coveralls/bin/coveralls.js"
