--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2015",
+    "outDir": "dist",
+    "moduleResolution": "node",
     "paths": {
-      "lit-custom-element": [ "src/index" ],
-      "lit-html": [ "node_modules/lit-html/lit-html" ],
-      "lit-element": [ "node_modules/lit-element/lit-element" ]
+      "lit-custom-element": [ "src/index" ]
     }
   }
 }
